Force dark mode for accessibility reasons, should fix later

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 @import 'code';
 
 @layer base {
-    html {
+    body {
         @apply text-black dark:text-white;
     }
 
